Rework builder pattern and document